It is pretty much all working now, no really!